--- a/package.json
+++ b/package.json
@@ -9,10 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@shopify/flash-list": "^2.2.2",
+    "@supabase/supabase-js": "^2.97.0",
+    "@tanstack/react-query": "^5.90.21",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.33",
-    "expo-status-bar": "~3.0.9",
+    "expo-av": "^16.0.8",
+    "expo-camera": "^17.0.10",
+    "expo-constants": "^18.0.13",
+    "expo-device": "^8.0.10",
+    "expo-image-picker": "^17.0.10",
+    "expo-linking": "^8.0.11",
+    "expo-notifications": "^0.32.16",
+    "expo-router": "^6.0.23",
+    "expo-status-bar": "^3.0.9",
+    "expo-system-ui": "^6.0.9",
+    "nativewind": "^4.2.2",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-hook-form": "^7.71.2",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gifted-charts": "^1.4.74",
+    "react-native-health-connect": "^3.5.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^4.2.2",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.23.0",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
