--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nutrifit",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -19,13 +19,13 @@
     "expo": "~54.0.33",
     "expo-av": "^16.0.8",
     "expo-camera": "^17.0.10",
-    "expo-constants": "^18.0.13",
+    "expo-constants": "~18.0.13",
     "expo-device": "^8.0.10",
     "expo-image-picker": "^17.0.10",
-    "expo-linking": "^8.0.11",
+    "expo-linking": "~8.0.11",
     "expo-notifications": "^0.32.16",
-    "expo-router": "^6.0.23",
-    "expo-status-bar": "^3.0.9",
+    "expo-router": "~6.0.23",
+    "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
     "nativewind": "^4.2.2",
     "react": "19.1.0",
@@ -36,8 +36,8 @@
     "react-native-health-connect": "^3.5.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.2.2",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
